versioned_docs/version-2026.1.1/professor/andre_alexandre_valentini.mdx
---
sidebar_label: 'André Alexandre Valentini'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "André Alexandre Valentini",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "História I - 2425",
          "size": 2,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "sala_5-1",
          "students": [
            "COM2025"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "História II - 2459",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "sala_15-2",
          "students": [
            "COM2024"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "FILOSOFIA I (524)",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "História II - 2459",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "sala_15-2",
          "students": [
            "COM2024"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Filosofia II - 624",
          "size": 2,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "sala_12-2",
          "students": [
            "AGO2025"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "História III - 2236",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "laboratorio_de_informatica_a",
          "students": [
            "IIW2024A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Projeto Integrador I - 2334",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "COM2026"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Projeto Integrador I (507)",
          "size": 2,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "a_definir",
          "students": [
            "COM2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Filosofia I - 2328",
          "size": 2,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "sala_3-1",
          "students": [
            "COM2026"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Projeto Integrador I - 2334",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "COM2026"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "História III - 2236",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "laboratorio_de_informatica_a",
          "students": [
            "IIW2024A"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Ética, responsabilidade social e ambiental - 2432",
          "size": 2,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "sala_5-1",
          "students": [
            "TGC2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Legislação e Ética Profissional - 692",
          "size": 2,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "sala_12-2",
          "students": [
            "ELE2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# André Alexandre Valentini

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

